--- a/.eslintrc
+++ b/.eslintrc
@@ -9,15 +9,10 @@
   ],
   "rules": {
     "no-console": "error",
-    "@typescript-eslint/no-var-requires": "off"
+    "@typescript-eslint/no-var-requires": "off",
+    "prefer-const": "off",
+    "@typescript-eslint/no-explicit-any": "off"
   },
-  // "prefer-const": [
-  //   "off",
-  //   {
-  //     "destructuring": "any",
-  //     "ignoreReadBeforeAssign": false
-  //   }
-  // ],
   "env": {
     "browser": true,
     "amd": true,
