--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV="development"
 
-MONGODB_URI=mongodb+srv://tinhadmin:admin@cluster0.wjlsi.mongodb.net/
+MONGODB_URI=mongodb+srv://tinhadmin:admin@cluster0.wjlsi.mongodb.net/it_socail?retryWrites=true&w=majority
 
 ACTIVE_TOKEN_SECRET=active_token_secret
 ACCESS_TOKEN_SECRET=access_token_secret
